--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -1,39 +1,47 @@
 {% extends "base.html.twig" %}
-{% block title %}Starshop{% endblock %}
+{% block title %}Starshop
+{% endblock %}
 {% block body %}
 
 
-<h1>Starshop: your monopoly-busting option for Starship parts!'</h1>
+	<h1>Starshop: your monopoly-busting option for Starship parts!'</h1>
 
-<div>
-    Brows through {{ numberOfStarships * 10 }} starships!
-    {% if numberOfStarships>400 %}
-    <p>
-    That's a shipload of ships!
-    </p>
-    {% endif %}
-    
-</div>
+	<div>
+		Brows through
+		{{ ships|length * 10 }}
+		starships!
 
-<div>
-    <h2>My Ship</h2>
-    <table>
-        <tr>
-            <th>Name</th>
-            <td>{{ myShip.name }}  </td>
-        </tr>
-        <tr>
-            <th>Class</th>
-            <td>{{ myShip.class }}  </td>
-        </tr>
-        <tr>
-            <th>Captain</th>
-            <td>{{ myShip.captain|upper }}  </td>
-        </tr>
-        <tr>
-            <th>Status</th>
-            <td>{{ myShip.status }}  </td>
-        </tr>
-    </table>
-</div>
+		{% if ships|length > 2 %}
+			<p>
+				That's a shipload of ships!
+			</p>
+		{% endif %}
+
+	</div>
+
+	<div>
+		<h2>My Ship</h2>
+		<table>
+			<tr>
+				<th>Name</th>
+				<td>{{ myShip.name }}
+				</td>
+			</tr>
+			<tr>
+				<th>Class</th>
+				<td>{{ myShip.class }}
+				</td>
+			</tr>
+			<tr>
+				<th>Captain</th>
+				<td>{{ myShip.captain|upper }}
+				</td>
+			</tr>
+			<tr>
+				<th>Status</th>
+				<td>{{ myShip.status }}
+				</td>
+			</tr>
+		</table>
+	</div>
 {% endblock %}
