--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -24,7 +24,10 @@
 		<table>
 			<tr>
 				<th>Name</th>
-				<td>{{ myShip.name }}
+				<td>
+					<a href="{{ path ('app_starship_show', {id: myShip.id} )}}">
+						{{ myShip.name }}
+					</a>
 				</td>
 			</tr>
 			<tr>
